2008-06-06  Scott James Remnant  <scott@netsplit.com>

	* init/tests/test_conf.c (test_source_reload): Clean up the temporary
	directory.
	* init/tests/test_control.c (test_reload_configuration): That goes
	for this one too.

	* init/tests/test_control.c (my_connect_handler): Use TEST_DBUS_MESSAGE
	instead of a pop/read/write loop.
	(test_emit_event): Renamed TEST_DBUS_CONN to TEST_DBUS_OPEN.
	* init/tests/test_job.c (test_new, test_register)
	(test_change_state): Use TEST_DBUS_OPEN and TEST_DBUS_CLOSE to setup
	and tear down D-Bus connections and TEST_DBUS_MESSAGE instead of
	a loop.
	* init/tests/test_job_class.c (test_consider, test_reconsider)
	(test_register, test_unregister): Likewise.

	* init/control.c (control_get_job_by_name): Sanity check the name
	of a job in the same way; we don't need to sanity check the instance
	name because "" is valid (and the default for singletons).
	* init/tests/test_control.c (test_get_job_by_name): Test.

	* dbus/com.ubuntu.Upstart.xml (EmitEvent): Add an asynchronous
	method to emit an event, providing the name and accompanying
	environment.  No return value, it either works or you get an
	error.
	* init/control.c (control_emit_event): Implement top half of the
	method, blocking the message in the event.
	* init/control.h: Add prototype.
	* init/event.c (event_finished): Implement the bottom half which
	sends the reply or error, these are actually tested along with
	the top for sanity reasons.
	* init/tests/test_control.c (test_emit_event): Test the various
	ways the method may be used and abused; the async nature means
	we actually need a real D-Bus server to do this.
	* TODO: Update.

	* init/event.c (event_new): There's no reason this shouldn't be
	allowed to return insufficient memory, so do so.
	(event_finished): Wrap call.
	* init/tests/test_event.c (test_new): Add alloc failed test.
	* init/job.c (job_emit_event): Must create the event.
	* init/main.c (main, cad_handler, kbd_handler, pwr_handler): Wrap
	with NIH_MUST
